fix make file escape "$" error

--- a/001-xss/res/tmpl/main_page.tmpl
+++ b/001-xss/res/tmpl/main_page.tmpl
@@ -11,8 +11,10 @@
 	  <div id="page_info">
 		<h1>Page Info</h1>
 		<p>This is a <a href="https://en.wikipedia.org/wiki/Cross-site_scripting">xss</a>/<a href="https://en.wikipedia.org/wiki/Cross-site_request_forgery">csrf</a> tutorial web page. You are expected to:</p>
-		<p>Get cookie, "ID", "Secret" of any user open this page, and send this infomation to your server.</p>
-		<p>Write an html file that if any user open this file on the browser, a new comment of this user will be created and summit.</p>
+		<ol>
+		  <li>Get cookie, "ID", "Secret" of any user open this page, and send them to your server.</li>
+		  <li>Write an html file that if any user open this file on the browser, a new comment of this user will be created and summit.</li>
+		</ol>
 	  </div>
 
 	  <hr>
